--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -220,15 +220,15 @@ section#home {
     gap: 0.5rem;
     
     margin: 0.5rem;
-    padding: 0.5rem;
+    padding: 0.25rem 0;
     
     background-color: $sec-light;
     color: $sec-light;
     font-weight: bold;
     border: 1px solid currentColor;
     border-radius: 0.75rem;
-    
     box-shadow: 0.25rem 0.25rem 0.125rem $sec-dark;
+
     &::after {
       content: "";
       width: 1em;
@@ -248,14 +248,17 @@ section#home {
       text-align: center;
       border: 1px solid currentColor;
       border-radius: 0.5rem;
-      margin: 0.125rem 0;
+      margin: 0.25rem 0.5rem;
       padding: 0.25rem;
     }
     a:hover, a:focus {
-      transform: scale(1.05);
+     
+      margin: 0rem 0.25rem;
+      padding: 0.5rem;
+      transition: all 250ms;
     }
     &:hover {
-      transform: scale(1.05);
+      // transform: scale(1.05);
       a {
         opacity: 0.5;
         &:hover {
