--- a/jobs.handlebars
+++ b/jobs.handlebars
@@ -1,6 +1,6 @@
 {{#each this}}
   <article id="{{id}}">
-    <h3>{{position}} bei {{company}}</h3>
+    <h3>{{position}} @ {{company}}</h3>
 		<p>{{desc}}</p>
 		<ul class="contents">
 		{{#each contents}}
