--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -10,10 +10,10 @@ $sec-light: #fff3b0;
 $sec-light-75: adjust-color($sec-light, $alpha: -0.25);
 $accent: #335c67; */
 
-$prime-dark: #264653;
+$prime-dark: #0e1977;
 $prime-dark-50: adjust-color($prime-dark, $alpha: -0.5);
 $prime-dark-75: adjust-color($prime-dark, $alpha: -0.25);
-$prime-light: #2a9d8f;
+$prime-light: #5c83ee;
 $prime-light-50: adjust-color($prime-light, $alpha: -0.5);
 $prime-light-75: adjust-color($prime-light, $alpha: -0.25);
 $sec-dark: #be3918;
@@ -42,6 +42,13 @@ figcaption {
   font-family: sans-serif;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin: 0.5rem auto;
+}
+
 body > header {
   background-color: $prime-dark;
   box-shadow: 0 0.25rem 0.125rem $prime-dark;
@@ -50,13 +57,19 @@ body > header {
   > h1 {
     font-size: 2.5rem;
     padding: 0.5rem;
+    max-width: max-content;
+    margin: 0 auto;
     color: $prime-light;
     text-align: center;
     $shadow: darken($prime-dark, 50%);
     text-shadow: 1px 1px $shadow, -1px 1px $shadow, 1px -1px $shadow, -1px -1px $shadow;
     @keyframes wobble {
-      from { transform: rotate(-2deg)}
-      to { transform: rotate(2deg) scale(1.05)}
+      from {
+        transform: rotate(-2deg);
+      }
+      to {
+        transform: rotate(2deg) scale(1.05);
+      }
     }
     animation: wobble 2s ease-in-out infinite alternate;
   }
@@ -68,7 +81,6 @@ body > header {
     font-family: sans-serif;
     text-align: center;
     font-weight: bold;
-   
   }
 }
 
@@ -105,7 +117,7 @@ section#home {
   min-height: 75vmin;
   max-height: 100vmax;
   /*  height: clamp(50vmin, min-content, 100vmax); */
-  background-color: $sec-dark;
+  background-color: $accent;
   background-image: url(../../assets/fur-texture-seamless-free.jpg);
   background-blend-mode: multiply;
   display: grid;
@@ -188,7 +200,6 @@ section#home {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 
     margin: 0.5rem;
     font-family: sans-serif;
@@ -218,10 +229,10 @@ section#home {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    
+
     margin: 0.5rem;
     padding: 0.25rem 0;
-    
+
     background-color: $sec-light;
     color: $sec-light;
     font-weight: bold;
@@ -251,8 +262,8 @@ section#home {
       margin: 0.25rem 0.5rem;
       padding: 0.25rem;
     }
-    a:hover, a:focus {
-     
+    a:hover,
+    a:focus {
       margin: 0rem 0.25rem;
       padding: 0.5rem;
       transition: all 250ms;
@@ -288,7 +299,26 @@ section#home {
 }
 
 section#skills {
-  padding: 0.5rem;
+  padding: 1.5rem;
+  background-color: $sec-light;
+  color: $sec-dark;
+
+  h2 {
+    background-color: $prime-light;
+    color: $prime-dark;
+    padding: 0.25rem 0.5rem;
+    box-shadow: 0.25rem 0.25rem 0.25rem $prime-dark;
+    margin-block-end: 1rem;
+  }
+
+  p {
+    margin-left: 0.5rem;
+    font-family: sans-serif;
+  }
+
+  & > * {
+    flex-basis: 50%;
+  }
 
   form#skillform {
     fieldset {
@@ -296,9 +326,79 @@ section#skills {
       grid-template-columns: 1fr;
       grid-template-rows: auto;
       grid-auto-rows: auto;
+      gap: 1rem;
+      margin-block-start: 1rem;
+      margin-block-end: 1rem;
+
       line-height: 1.5rem;
       font-size: 1.5rem;
+      font-family: sans-serif;
       border: none;
+
+      legend {
+        grid-row: 1 / 2;
+        grid-column: 1/3;
+
+        background-color: $prime-light;
+        color: $prime-dark;
+        padding: 0.25rem 0.5rem;
+        box-shadow: 0.25rem 0.25rem 0.25rem $prime-dark;
+        width: 100%;
+        margin: 0 auto;
+        box-sizing: border-box;
+        margin-block-end: 1rem;
+
+        font-family: sans-serif;
+        font-size: 1rem;
+        font-weight: bold;
+      }
+
+      input {
+        display: inline-block;
+        position: absolute;
+        width: 0;
+        height: 0;
+        opacity: 0;
+
+        &[value="1"] + label::after {
+          content: "⭐";
+        }
+        &[value="2"] + label::after {
+          content: "⭐⭐";
+        }
+        &[value="3"] + label::after {
+          content: "⭐⭐⭐";
+        }
+        &[value="4"] + label::after {
+          content: "⭐⭐⭐⭐";
+        }
+        &[value="5"] + label::after {
+          content: "⭐⭐⭐⭐⭐";
+        }
+      }
+    }
+
+    label {
+      margin-left: 0.5rem;
+      font-size: 1rem;
+      line-height: 2rem;
+      position: relative;
+      font-weight: bold;
+      width: calc(100% - (5 * 1.5rem) - 0.5rem);
+
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        right: calc(-5 * 1.5em);
+        top: calc(50%);
+        transform: translateY(-50%);
+        text-align: right;
+        margin-left: 1rem;
+        width: calc(5 * 1.5em);
+        background-color: $prime-light;
+        box-shadow: 0.25rem 0.25rem 0.25rem $prime-dark;
+      }
     }
   }
 }
@@ -311,6 +411,7 @@ section#skills {
     grid-auto-rows: auto;
     align-content: start;
     align-items: start;
+    gap: 1rem;
   }
 }
 
@@ -320,65 +421,64 @@ section#skills {
   }
 }
 
-section#skills fieldset legend {
-  font-family: sans-serif;
-  font-size: 1rem;
-  font-weight: bold;
-  grid-row: 1 / 2;
-  grid-column: 1/3;
-}
-
-section#skills > * {
-  flex-basis: 50%;
-}
-
-section#skills input {
-  display: inline-block;
-  width: 0;
-  opacity: 0;
-}
-
-section#skills label {
-  font-size: 1rem;
-  line-height: 2rem;
-  position: relative;
-}
-
-section#skills label::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  right: 0;
-  text-align: right;
-  margin-left: 1rem;
-  width: calc(5 * 1.5em);
-  background-color: transparent;
-  border: 1px solid lightslategrey;
-  border-radius: 0.5rem;
-}
-
-section#skills *[value="1"] + label::after {
-  content: "⭐";
-}
-section#skills *[value="2"] + label::after {
-  content: "⭐⭐";
-}
-section#skills *[value="3"] + label::after {
-  content: "⭐⭐⭐";
-}
-section#skills *[value="4"] + label::after {
-  content: "⭐⭐⭐⭐";
-}
-section#skills *[value="5"] + label::after {
-  content: "⭐⭐⭐⭐⭐";
-}
-
 section#cv {
-  padding: 0.5rem;
-  #jobs ul.contents {
-    padding-left: 2rem;
+  background-color: $prime-light;
+  color: $prime-dark;
+  padding: 1.5rem;
+
+  h2 {
+    background-color: $sec-light;
+    color: $sec-dark;
+    padding: 0.25rem 0.5rem;
+    box-shadow: 0.25rem 0.25rem 0.25rem $sec-dark;
+  }
+
+  p {
+    font-family: sans-serif;
+    margin-left: 0.5rem;
+  }
+  #jobs {
+
+    h3 {
+      padding: 0.25rem 0.5rem;
+    }
+
+    article {
+      h3 {
+        background-color: $sec-light;
+        color: $sec-dark;
+        box-shadow: 0.25rem 0.25rem 0.25rem $sec-dark;
+      }
+
+      p {
+        font-family: sans-serif;
+        padding: 0.5rem 0.25rem;
+      }
+
+      ul.contents {
+        margin-left: 0.5rem;
+        list-style: none;
+        
+        li {
+          background-color: lighten($prime-light, 20%);
+          margin: 0.5rem 0;
+          padding: 0.25rem;
+          box-shadow: 0.25rem 0.25rem 0.25rem $prime-dark;
+        }
+      }
+    }
   }
 }
+
+
+@media screen and (min-width: 450px) {
+  #jobs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+}
+
 
 a#to-top {
   display: block;
